Thu Jun 26 19:55:23 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:
        * dds/DCPS/WriteDataContainer.cpp:

          Fixed exiting loop when timeout occurs.

Thu Jun 26 19:34:36 UTC 2014  Phillip LaBanca  <labanca_p@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/Publisher.cpp:

          Moved topic creation to after argument processing

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSApp.cpp:

          Changed DDSApp constructor to explictly initalize
          DomainParticipantFactory

Thu Jun 26 17:19:03 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Added comments for usage of topic overloaded methods.

Thu Jun 26 16:02:01 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logging for tracking when waiting for pending messages.

        * tests/DCPS/LargeSample/run_test.pl:

          Setting the pending message wait time to 1 second.

Thu Jun 26 15:43:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Missed adding support for creating topic with qos, topic listener,
          and/or status mask.

Thu Jun 26 15:13:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:

          Added logging when done waiting for pending messages.

Thu Jun 26 14:16:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/subscriber.cpp:

          Added log messages to identify what is going on when publisher
          or subscriber times out.

Wed Jun 25 18:57:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:

          Added logging to identify when indefinitely waiting for
          pending messages.

        * tests/DCPS/ConfigTransports/run_test.pl:
        * tests/DCPS/FooTest3_0/run_test.pl: